--- a/for_uu.html
+++ b/for_uu.html
@@ -15,7 +15,7 @@
     <div class="containera">
         <h1 class="light-text">
 <span>W</span><span>i</span><span>l</span><span>l</span><span> </span><span>y</span><span>o</span><span>u</span><span> </span><span>b</span><span>e</span><span> </span><span>m</span><span>y</span>
-<span>D</span><span>e</span><span>m</span><span>o</span><span>n</span><span> </span><span>Q</span><span>u</span><span>e</span><span>e</span><span>n</span><span>?</span>
+<span>D</span><span>e</span><span>v</span><span>i</span><span>l</span><span> </span><span>Q</span><span>u</span><span>e</span><span>e</span><span>n</span><span>?</span>
         </h1>
         <div class="buttons">
             <button class="yes-button" onclick="handleYesClick()">Yes</button>
