--- a/yes_page.html
+++ b/yes_page.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Queen Demon 👑😈</title>
+  <title>My Devil Queen 👑😈</title>
   <link rel="stylesheet" href="css/yes_style.css" />
   <link rel="icon" href="img/pp_kompres.jpeg" type="image/x-icon">
 </head>
 <body>
   <div class="overlay"></div>
   <div class="container">
-    <h1 class="header_text">You’re now my Queen Demon 😈❤️</h1>
+    <h1 class="header_text">You’re now my Devil Queen 😈❤️</h1>
     <div class="gif_container">
       <img src="img/41d9d196-1fb8-4952-afd3-2e7effc587ca.gif" alt="Demon Queen Gif">
     </div>
