--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="icon" href="img/pp_kompres.jpeg" type="image/x-icon">
     <title>For You</title>
 </head>
-<body>
-    <div class="greetings">
+<body translate="no">
+    <div class="greetings" translate="no">
         <span>Y</span>
         <span>O</span>
         <span>U</span>
@@ -20,7 +20,7 @@
         <span>O</span>
         <span>N</span>
     </div>
-    <div class="greetings">
+    <div class="greetings" translate="no">
         <span></span>
         <span></span>
         <span></span>
@@ -28,12 +28,12 @@
         <span></span>
         <span></span>
     </div>
-    <div class="description">
+    <div class="description" translate="no">
         <span>From me Dika, to my favorite girl.</span>
     </div>
-    <div class="button">
+    <div class="button" translate="no">
         <button>
-            <a href="for_uu.html">Open</a>
+            <a href="for_uu.html" translate="no">Open</a>
         </button>
         
     </div>
