--- a/for_uu.html
+++ b/for_uu.html
@@ -10,14 +10,14 @@
     <title>Will You?</title>
 </head>
 
-<body class="container">
-  <div class="main">
-    <div class="containera">
+<body class="container" translate="no">
+  <div class="main" translate="no">
+    <div class="containera" translate="no">
         <h1 class="light-text">
 <span>W</span><span>i</span><span>l</span><span>l</span><span> </span><span>y</span><span>o</span><span>u</span><span> </span><span>b</span><span>e</span><span> </span><span>m</span><span>y</span>
 <span>D</span><span>e</span><span>v</span><span>i</span><span>l</span><span> </span><span>Q</span><span>u</span><span>e</span><span>e</span><span>n</span><span>?</span>
         </h1>
-        <div class="buttons">
+        <div class="buttons" translate="no">
             <button class="yes-button" onclick="handleYesClick()">Yes</button>
             <button class="no-button" onclick="handleNoClick()">No</button>
         </div>
@@ -29,7 +29,7 @@
     <script src="bot.js"></script>
   </div>
   <div id="layout"></div>
-  <div id="loading-popup" style="display: none;">
+  <div id="loading-popup" style="display: none;" translate="no">
     <div class="overlay"></div>
     <div class="popup">
       <p>Wait..</p>
