--- a/yes_page.html
+++ b/yes_page.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="css/yes_style.css" />
   <link rel="icon" href="img/pp_kompres.jpeg" type="image/x-icon">
 </head>
-<body>
+<body translate="no">
   <div class="overlay"></div>
-  <div class="container">
-    <h1 class="header_text">You’re now my Devil Queen 😈❤️</h1>
+  <div class="container" translate="no">
+    <h1 class="header_text" translate="no">You’re now my Devil Queen 😈❤️</h1>
     <div class="gif_container">
       <img src="img/41d9d196-1fb8-4952-afd3-2e7effc587ca.gif" alt="Demon Queen Gif">
     </div>
-    <p class="sub_text">Together we'll rule the world</p>
+    <p class="sub_text" translate="no">Together we'll rule the world</p>
   </div>
 </body>
 </html>
